--- a/classes.html
+++ b/classes.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="TopGym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TopGym | Fitness HTML Template</title>
+    <title>Top Gym</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,700,900" rel="stylesheet">
@@ -109,7 +109,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-classes">
                         <div class="classes-img">
-                            <img src="img/classes/classes-1.jpg" alt="">
+                            <img src="img/classes/classes1.jpg" alt="">
                         </div>
                         <div class="classes-text">
                             <h5>Pilates</h5>
@@ -121,7 +121,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-classes">
                         <div class="classes-img">
-                            <img src="img/classes/classes-2.jpg" alt="">
+                            <img src="img/classes/classes2.png" alt="">
                         </div>
                         <div class="classes-text">
                             <h5>Body Building</h5>
@@ -133,7 +133,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-classes">
                         <div class="classes-img">
-                            <img src="img/classes/classes-3.jpg" alt="">
+                            <img src="img/classes/classes3.png" alt="">
                         </div>
                         <div class="classes-text">
                             <h5>Fitness</h5>
@@ -145,7 +145,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-classes">
                         <div class="classes-img">
-                            <img src="img/classes/classes-4.jpg" alt="">
+                            <img src="img/classes/classes4.jpg" alt="">
                         </div>
                         <div class="classes-text">
                             <h5>Yoga</h5>
@@ -157,7 +157,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-classes">
                         <div class="classes-img">
-                            <img src="img/classes/classes-5.jpg" alt="">
+                            <img src="img/classes/classes5.jpg" alt="">
                         </div>
                         <div class="classes-text">
                             <h5>Trx</h5>
@@ -169,7 +169,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-classes">
                         <div class="classes-img">
-                            <img src="img/classes/classes-6.jpg" alt="">
+                            <img src="img/classes/classes6.jpg" alt="">
                         </div>
                         <div class="classes-text">
                             <h5>Spinning</h5>
