--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="zxx">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta name="description" content="TopGym Template">
     <meta name="keywords" content="TopGym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TopGym | Fitness HTML Template</title>
+    <title>Top Gym</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,700,900" rel="stylesheet">
@@ -93,17 +93,17 @@
     <!-- Hero Slider Section Begin -->
     <section class="hero-slider">
         <div class="slide-items owl-carousel">
-            <div class="single-slide set-bg active" data-setbg="img/bg.jpg">
+            <div class="single-slide set-bg active" data-setbg="img/bg2.jpg">
                 <!-- <a href="https://www.youtube.com/watch?v=SEVuD_djKrU" class="play-btn pop-up"><i class="fa fa-play"></i></a> -->
                 <h1>Be Fit.Top Gym</h1>
                 <!-- <a href="#" class="primary-btn">Read More</a> -->
             </div>
-            <div class="single-slide set-bg" data-setbg="img/bg-2.jpg">
+            <div class="single-slide set-bg" data-setbg="img/bg1.jpg">
                 <!-- <a href="https://www.youtube.com/watch?v=SEVuD_djKrU" class="play-btn pop-up"><i class="fa fa-play"></i></a> -->
                 <h1>Be Fit.Top Trainer</h1>
                 <!-- <a href="#" class="primary-btn">Read More</a> -->
             </div>
-            <div class="single-slide set-bg" data-setbg="img/bg-3.jpg">
+            <div class="single-slide set-bg" data-setbg="img/bg3.jpg">
                 <!-- <a href="https://www.youtube.com/watch?v=SEVuD_djKrU" class="play-btn pop-up"><i class="fa fa-play"></i></a> -->
                 <h1>Be Fit.Top Body</h1>
                 <!-- <a href="#" class="primary-btn">Read More</a> -->
@@ -118,7 +118,7 @@
                 <div class="col-md-4">
                     <div class="single-features">
                         <div class="features-img">
-                            <img src="img/features/feature-1.jpg" alt="">
+                            <img src="img/features/gymindoor.jpg" alt="">
                         </div>
                         <div class="feature-text">
                             <div class="feature-icon">
@@ -133,7 +133,7 @@
                 <div class="col-md-4">
                     <div class="single-features">
                         <div class="features-img">
-                            <img src="img/features/feature-2.jpg" alt="">
+                            <img src="img/features/gymTrainer.jpg" alt="">
                         </div>
                         <div class="feature-text">
                             <div class="feature-icon">
@@ -148,7 +148,7 @@
                 <div class="col-md-4">
                     <div class="single-features">
                         <div class="features-img">
-                            <img src="img/features/feature-3.jpg" alt="">
+                            <img src="img/features/Diet Plans.jpg" alt="">
                         </div>
                         <div class="feature-text">
                             <div class="feature-icon">
@@ -233,7 +233,7 @@
                 <div class="col-md-4">
                     <div class="single-trainer">
                         <div class="trainer-img">
-                            <img src="img/trainer/trainer-1.jpg" alt="">
+                            <img src="img/trainer/gym trainer1.jpg" alt="">
                             <div class="img-hover">
                                 <a href="#"><i class="fa fa-plus"></i></a>
                             </div>
@@ -246,7 +246,7 @@
                 <div class="col-md-4">
                     <div class="single-trainer">
                         <div class="trainer-img">
-                            <img src="img/trainer/trainer-2.jpg" alt="">
+                            <img src="img/trainer/gym trainer2.jpg" alt="">
                             <div class="img-hover">
                                 <a href="#"><i class="fa fa-plus"></i></a>
                             </div>
@@ -259,7 +259,7 @@
                 <div class="col-md-4">
                     <div class="single-trainer">
                         <div class="trainer-img">
-                            <img src="img/trainer/trainer-3.jpg" alt="">
+                            <img src="img/trainer/gym trainer3.jpg" alt="">
                             <div class="img-hover">
                                 <a href="#"><i class="fa fa-plus"></i></a>
                             </div>
